--- a/views/mainPage.ejs
+++ b/views/mainPage.ejs
@@ -1,7 +1,21 @@
 <%- include("page_top.ejs")%>
 <main>
-    <h1>
-      good morning
-    </h1>
+
+    <div class="wrapper">
+        <input type="text" id="nameInp" placeholder="Category Name..." name="name"><br>
+        <input type="button" value="add" onclick="addLine()"><br>
+        <table>
+            <thead>
+            <tr>
+                <th> Edit </th>
+                <th> שם קטגוריה </th>
+                <th> ID </th>
+                <th> Delete </th>
+            </tr>
+            </thead>
+            <tbody></tbody>
+        </table>
+
+    </div>
 </main>
 <%- include("page_bottom.ejs")%>
