final work on categories in project to_do_list - added routers, ejs page + html + css + js,

--- a/views/tasks_data.ejs
+++ b/views/tasks_data.ejs
@@ -1,9 +1,8 @@
 <%- include("page_top.ejs")%>
 <main>
-
     <div class="wrapper">
-        <%- include("category_table.ejs")%>
+        <%- include("tasks_table.ejs")%>
     </div>
 </main>
-<script src="/main.js"></script>
+<script src="/main-tasks.js"></script>
 <%- include("page_bottom.ejs")%>
