--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ table {
     width: 70%;
 }
 
-td,
+td,input[type="submit"],
 th {
     border: 1px solid #dddddd;
     text-align: right;
@@ -26,3 +26,10 @@ tbody tr:nth-child(even) {
 tbody tr:hover {
     background-color: yellow;
 }
+input[type="submit"]{
+    border: none;
+}
+
+
+
+
