--- a/views/tasks_table.ejs
+++ b/views/tasks_table.ejs
@@ -1,4 +1,5 @@
-<form action="http://localhost:2506/Tasks/Add" method="post" >
+
+<form action="http://localhost:2506/Tasks/Add" method="post" id="tasksForm" >
 <input type="text" placeholder="task Name..." id="Missions_Name"  name="Missions_Name"   ><br>
 <input type="text" placeholder="Owner Id..."  id="Owner_Id"  name="Owner_Id"        ><br>
 <input type="text" placeholder="Due Date..."  id="Due_Date"  name="Due_Date"        ><br>
